[gd_scene load_steps=8 format=2]

[ext_resource path="res://level/menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://level/menu/ScoreBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://level/menu/frame.png" type="Texture" id=3]
[ext_resource path="res://entities/player/ship.png" type="Texture" id=4]
[ext_resource path="res://level/menu/button_hollow.png" type="Texture" id=5]
[ext_resource path="res://level/menu/button_full.png" type="Texture" id=6]
[ext_resource path="res://level/menu/button_focussed.png" type="Texture" id=7]

[node name="HBoxContainer" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Margin" ]
scorebox_scene = ExtResource( 2 )

[node name="ScoreContainer" type="MarginContainer" parent="." index="0"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 292.0
margin_right = 600.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="ScoreScreen" type="VBoxContainer" parent="ScoreContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 308.0
margin_bottom = 600.0
rect_min_size = Vector2( 300, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="HiScoreBox" parent="ScoreContainer/ScoreScreen" index="0" instance=ExtResource( 2 )]

[node name="YourScoreBox" type="HBoxContainer" parent="ScoreContainer/ScoreScreen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 300.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="HiScoreName" type="Label" parent="ScoreContainer/ScoreScreen/YourScoreBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_right = 167.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "YOUR_SCORE:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HiScoreDisplay" type="Label" parent="ScoreContainer/ScoreScreen/YourScoreBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 171.0
margin_right = 219.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "000000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="ScoreContainer/ScoreScreen" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 300.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MainMenu" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 443.0
margin_right = 581.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="CenterContainer" type="CenterContainer" parent="MainMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 138.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="TextureRect" type="TextureRect" parent="MainMenu/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_right = 133.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0

[node name="ship" type="TextureRect" parent="MainMenu/CenterContainer/TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 20.0
margin_right = 94.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="PresentScoreBox" parent="MainMenu" index="1" instance=ExtResource( 2 )]

margin_top = 132.0
margin_right = 138.0
margin_bottom = 146.0
_sections_unfolded = [ "Focus" ]

[node name="NextLevelButton" type="TextureButton" parent="MainMenu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 150.0
margin_right = 138.0
margin_bottom = 214.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_bottom = NodePath("../RetireButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Focus" ]

[node name="Label" type="Label" parent="MainMenu/NextLevelButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "NEXT_LEVEL"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RetireButton" type="TextureButton" parent="MainMenu" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 218.0
margin_right = 138.0
margin_bottom = 282.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_top = NodePath("../NextLevelButton")
focus_neighbour_bottom = NodePath("../HelpButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Focus", "Textures" ]

[node name="Label2" type="Label" parent="MainMenu/RetireButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LAY_LOW"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HelpButton" type="TextureButton" parent="MainMenu" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 286.0
margin_right = 138.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_top = NodePath("../RetireButton")
focus_neighbour_bottom = NodePath("../ExitButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Focus", "Textures" ]

[node name="Label3" type="Label" parent="MainMenu/HelpButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "HELP"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ExitButton" type="TextureButton" parent="MainMenu" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 354.0
margin_right = 138.0
margin_bottom = 418.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_top = NodePath("../HelpButton")
focus_neighbour_bottom = NodePath("../NextLevelButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="Label2" type="Label" parent="MainMenu/ExitButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -2.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "EXIT"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HelpScreen" type="MarginContainer" parent="." index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 218.0
margin_right = 943.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="VBoxContainer" type="VBoxContainer" parent="HelpScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 725.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="HelpText" type="Label" parent="HelpScreen/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 717.0
margin_bottom = 473.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "SUBTHERMAL TORCH SHIP
ODYSEUSS CLASS
REGISTRATION [ERROR]
OWNER [ERROR]
FLEET [ERROR]

PILOTING:
Navigation is accomplished via a simplified interface, using the arrow or WASD keys of a standard keyboard. 
Note: a redundant front facing engine is not provided, Pilots should be able to brake using their principal engine.
The [ERROR] masses 137 Earth Adjusted Tons, and care should be taken with built up momentum.

A mass-screen is deployable with the spacebar. Deployment  and retrieval is automatic and rapid.
While the mass-screen is deployed, only manuevering thrusters are availible; The main engine cannot be fired.
The mass screen allows for the rapid shedding of heat, and in particulalry high debris environments,
 can collect particulate matter, for repairs. Proximity to debris vastly increases the rate of collection.

Nearspace collection is automatically performed on any CIN beacon identified objects.

Mechanics note: Listen buster, this thing burns fucking hot, and i can only hide so much heat. 
Keep an eye on your thermal buffer, if that hits the top, you'll be lit up like a Kvir-erm-shik on Gerb night.
Remember, it's the mass gauge on the left, thermals on the right, and how many hits your hull can take up top.
Grab all the blinking cannisters, you can see and we'll drop in a gate so you can GTFO.
Being real here, i don't think we'll ever see you again, but the video should be funny.
If you get back here, we can maybe send you out again,
 but it could be best to cut your losses and accept the cash you've earned.
Corpses can't spend credits.
Good luck out there!
~Darryl"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="HBoxContainer" type="HBoxContainer" parent="HelpScreen/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 477.0
margin_right = 717.0
margin_bottom = 541.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="CloseHelp" type="TextureButton" parent="HelpScreen/VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="HelpScreen/VBoxContainer/HBoxContainer/CloseHelp" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "CLOSE_HELP"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="MainMenu/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]

[connection signal="pressed" from="MainMenu/RetireButton" to="." method="_on_RetireButton_pressed"]

[connection signal="pressed" from="MainMenu/HelpButton" to="." method="_on_HelpButton_pressed"]

[connection signal="pressed" from="MainMenu/ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="pressed" from="HelpScreen/VBoxContainer/HBoxContainer/CloseHelp" to="." method="_on_CloseHelp_pressed"]


