extends HBoxContainer


func _on_NextLevelButton_pressed():
	pass # replace with function body


func _on_RetireButton_pressed():
	pass # replace with function body


func _on_HelpButton_pressed():
	pass # replace with function body


func _on_ExitButton_pressed():
	print("exiting")
	SceneTree.quit()
